--- a/app/assets/stylesheets/password.scss
+++ b/app/assets/stylesheets/password.scss
@@ -1,66 +1,56 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+// .container {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+// }
 
-.container h2 {
-    text-align: center;
-    padding: 20px;
-    color: #665dfe;
-}
+// .container h2 {
+//     text-align: center;
+//     padding: 20px;
+//     color: #665dfe;
+// }
 
-.container form {
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+// .container form {
+//     margin-left: auto;
+//     margin-right: auto;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: center;
+// }
 
-.field {
-    line-height: 2;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-}
+// .field {
+//     line-height: 2;
+//     padding: 10px;
+//     display: flex;
+//     flex-direction: column;
+// }
 
-.field input {
-    background-color: #d5d2ff;
-    padding: 10px 20px;
-    width: 300px;
-    outline: none;
-    border: none;
-    border-radius: 0.3rem;
-}
+// .field input {
+//     background-color: #d5d2ff;
+//     padding: 10px 20px;
+//     width: 300px;
+//     outline: none;
+//     border: none;
+//     border-radius: 0.3rem;
+// }
 
-.actions {
-    padding: 10px;
-}
+// .actions {
+//     padding: 10px;
+// }
 
-.actions input {
-    padding: 10px 20px;
-    color: #f8f9fa;
-    background-color: #665dfe;
-    border-radius: 5px;
-    outline: none;
-    font-weight: bold;
-    cursor: pointer;
-}
+// .actions input {
+//     padding: 10px 20px;
+//     color: #f8f9fa;
+//     background-color: #665dfe;
+//     border-radius: 5px;
+//     outline: none;
+//     font-weight: bold;
+//     cursor: pointer;
+// }
 
-a {
-    color: #665dfe;
-    font-weight: bold;
-    padding: 10px;
-}
-/* 
-a {
-    color: #665dfe;
-    font-weight: bold;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 10px;
-} */
+// a {
+//     color: #665dfe;
+//     font-weight: bold;
+//     padding: 10px;
+// }
