--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -54,13 +54,3 @@ a {
     font-weight: bold;
     padding: 10px;
 }
-
-/* a {
-    color: #665dfe;
-    font-weight: bold;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 10px;
-} */
